v0.3.0/_sources/api/generated/pygmt.Figure.rst.txt
pygmt.Figure
============

.. currentmodule:: pygmt

.. autoclass:: Figure

.. rubric:: Methods Summary

.. autosummary::
    
    
    
    
    Figure.basemap
    
    
    
    Figure.coast
    
    
    
    Figure.colorbar
    
    
    
    Figure.contour
    
    
    
    Figure.grdcontour
    
    
    
    Figure.grdimage
    
    
    
    Figure.grdview
    
    
    
    Figure.image
    
    
    
    Figure.inset
    
    
    
    Figure.legend
    
    
    
    Figure.logo
    
    
    
    Figure.meca
    
    
    
    Figure.plot
    
    
    
    Figure.plot3d
    
    
    
    Figure.psconvert
    
    
    
    Figure.savefig
    
    
    
    Figure.set_panel
    
    
    
    Figure.shift_origin
    
    
    
    Figure.show
    
    
    
    Figure.subplot
    
    
    
    Figure.text
    
    

.. include:: backreferences/pygmt.Figure.examples

.. raw:: html

     <div style='clear:both'></div>
